# LynxMind

./: .env.example  .gitignore  README.md  docker-compose.yml  download_m3.py  pyproject.toml
backend/: agent.py  api.py  app.py  cache.py  database.py  document_loader.py  embedding.py  models.py  news_service.py  parent_chunk_store.py  qdrant_store.py  qdrant_writer.py  rag_pipeline.py  rag_utils.py  schemas.py  tools.py
frontend/: index.html  script.js  style.css
